--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						alt="twitter"></a>
 				<a href="https://codeforces.com/profile/NI-LOY"><img src="cf.png" height="36" width="36"
 						alt="codeforces"></a>
-				<a href="http://www.queensdogwalker.wordpress.com/"><img src="Stalk.png" height="36" width="36"
+				<a href="https://www.stopstalk.com/user/profile/niloy104"><img src="Stalk.png" height="36" width="36"
 						alt="stopstalk"></a>
 			</div>
 		</div>
